[gd_scene load_steps=8 format=3 uid="uid://bw4g4sqrid6dl"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_0nx3n"]
[ext_resource type="PackedScene" uid="uid://cxstjq63yeytk" path="res://game/game.tscn" id="2_1xogi"]
[ext_resource type="Theme" uid="uid://dbf3mfbni11oq" path="res://main_menu/main_menu_theme/main_menu_theme.tres" id="2_liuhe"]
[ext_resource type="PackedScene" uid="uid://ciev25y0jewy5" path="res://main_menu/sound_button/sound_button.tscn" id="3_4aeqp"]
[ext_resource type="Texture2D" uid="uid://dj4hoybqid6rs" path="res://main_menu/sprites/title_screen.png" id="3_6fiig"]
[ext_resource type="StyleBox" uid="uid://xcag8qpmn84" path="res://main_menu/main_menu_theme/panel.tres" id="6_p5iyb"]
[ext_resource type="PackedScene" uid="uid://cj4gfeuhn8y2b" path="res://main_menu/button_sound_controller.tscn" id="7_vm1io"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MainMenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nx3n")
start_scene = ExtResource("2_1xogi")

[node name="Background" type="TextureRect" parent="MainMenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6fiig")

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -292.0
offset_bottom = 86.0
grow_horizontal = 0
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 200

[node name="TitleLabel" type="Label" parent="MainMenuControl/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
theme_override_font_sizes/font_size = 60
text = "Downroot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButtonContainer" type="VBoxContainer" parent="MainMenuControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -484.0
offset_top = -328.0
offset_right = -228.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MainMenuControl/MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("2_liuhe")
text = "Play"

[node name="InfoButton" type="Button" parent="MainMenuControl/MainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
text = "Info"

[node name="CreditsButton" type="Button" parent="MainMenuControl/MainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
text = "Credits"

[node name="QuitButton" type="Button" parent="MainMenuControl/MainMenuButtonContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayButton")
theme = ExtResource("2_liuhe")
text = "Quit"

[node name="SoundButton" parent="MainMenuControl" instance=ExtResource("3_4aeqp")]
layout_mode = 1

[node name="CreditPanel" type="Panel" parent="MainMenuControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_liuhe")
theme_override_styles/panel = ExtResource("6_p5iyb")

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/CreditPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuControl/CreditPanel/MarginContainer"]
layout_mode = 2

[node name="JamLabel" type="Label" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_liuhe")
text = "- A game made for Global Game Jam 2023 -"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_liuhe")

[node name="CreditsLabel1" type="Label" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Design and UI

Zereijin"
horizontal_alignment = 1

[node name="CreditsLabel2" type="Label" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Art and Sound

Fyda"
horizontal_alignment = 1

[node name="CreditsLabel3" type="Label" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
text = "Programming

Hawk777"
horizontal_alignment = 1

[node name="CloseCreditsButton" type="Button" parent="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("2_liuhe")
text = "Go Back"

[node name="InfoPanel" type="Panel" parent="MainMenuControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_liuhe")
theme_override_styles/panel = ExtResource("6_p5iyb")

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuControl/InfoPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_liuhe")

[node name="InfoLabel1" type="RichTextLabel" parent="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
bbcode_enabled = true
text = "[b][u]BODY UPGRADES:[/u][/b]

[b]Health:[/b] increase max HP
[b]Defense:[/b] take less damage
[b]Speed:[/b] move faster
[b]Dodge:[/b] raise chance of taking no damage from a hit"
autowrap_mode = 2

[node name="InfoLabel2" type="RichTextLabel" parent="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
bbcode_enabled = true
text = "[b][u]SHOOTING UPGRADES:[/u][/b]

[b]Damage:[/b] increased shot damage
[b]Speed:[/b] faster rate of fire
[b]Crit%:[/b] higher chance of a shot dealing 2x damage
[b]Count:[/b] more shots fired per burst
[b]Accuracy:[/b] shots are less spread out"

[node name="InfoLabel3" type="RichTextLabel" parent="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_liuhe")
bbcode_enabled = true
text = "[b][u]SCREAM UPGRADES:[/u][/b]

[b]Damage:[/b] increased scream damage
[b]Paralysis:[/b] stun lasts longer
[b]Rate:[/b] scream charges faster while burrowed
[b]Max:[/b] scream has longer range
[b]Regen:[/b] heal faster while burrowed"

[node name="CloseInfoButton" type="Button" parent="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("2_liuhe")
text = "Go Back"

[node name="ButtonSoundController" parent="MainMenuControl" instance=ExtResource("7_vm1io")]

[connection signal="mouse_entered" from="MainMenuControl/MainMenuButtonContainer/PlayButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/PlayButton" to="MainMenuControl" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/PlayButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenuControl/MainMenuButtonContainer/InfoButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/InfoButton" to="MainMenuControl" method="_on_info_button_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/InfoButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenuControl/MainMenuButtonContainer/CreditsButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/CreditsButton" to="MainMenuControl" method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/CreditsButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenuControl/MainMenuButtonContainer/QuitButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/QuitButton" to="MainMenuControl" method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenuControl/MainMenuButtonContainer/QuitButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/CloseCreditsButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/CloseCreditsButton" to="MainMenuControl" method="_on_close_credits_button_pressed"]
[connection signal="pressed" from="MainMenuControl/CreditPanel/MarginContainer/VBoxContainer/CloseCreditsButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/CloseInfoButton" to="MainMenuControl/ButtonSoundController" method="_on_mouse_entered"]
[connection signal="pressed" from="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/CloseInfoButton" to="MainMenuControl" method="_on_close_info_button_pressed"]
[connection signal="pressed" from="MainMenuControl/InfoPanel/MarginContainer/VBoxContainer/CloseInfoButton" to="MainMenuControl/ButtonSoundController" method="_on_pressed"]
